--- a/.github/workflows/getdeps_mac.yml
+++ b/.github/workflows/getdeps_mac.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: macOS-latest
+    runs-on: macOS-13
     steps:
     - uses: actions/checkout@v4
     - name: Install Rust Stable
